--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>eae kk</h1>
-    <p><%= 1+1 %></p>
+    
+    <form action="/create" method="post">
+        <input type="text" name="task" id="task" placeholder="Inserir nova tarefa">
+        <button id="addButton" type="submit">Adicionar</button>
+    </form>
+
+    <ul>
+        <% taskList.forEach((task) => {%>
+            <li><%= task.task %> | <%= task.date.toLocaleDateString("pt-BR") %></li>
+        <% }) %>
+    </ul>
+
 </body>
 </html>
