--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,222 @@
-h1 {
-    color: red;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, Arial;
+}
+
+body {
+    background-color: #202024;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+}
+
+header {
+    background-color: #005290;
+    padding: 3rem;
+    margin: 0.5rem;
+    text-align: center;
+}
+
+header h1 {
+    padding-bottom: 3rem;
+}
+
+input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: 0.6rem;
+    font-size: 1rem;
+    outline: none;
+    background-color: #202024;
+    color: #fff;
+}
+
+button {
+    padding: 0.6rem;
+    width: 22%;
+    background-color: #202024;
+    color: #6d6d6d;
+    text-align: center;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 0;
+    border: none;
+    transition: all 0.1s ease-in-out;
+}
+
+button:hover {
+    background-color: #404044;
+    color: #fff;
+}
+
+#task-list {
+    margin: 0.5rem;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li {
+    position: relative;
+    padding: 0.7rem;
+    background-color: #161616;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    transition: all 0.1s ease-in-out;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.3rem;
+}
+
+ul li span {
+    color: #ccc;
+    font-style: italic;
+    font-size: 0.8rem;
+    padding-left: 1rem;
+}
+
+ul li div {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+ul li:nth-child(odd) {
+    /* Comando especifico pra pular de li em li*/
+    background-color: #202024;
+}
+
+ul li:hover {
+    background-color: #404044;
+}
+
+.btn-update {
+    padding: 0.5rem;
+    text-decoration: none;
+    color: #ccc;
+    transition: all 0.1s ease-in-out;
+}
+
+.btn-update:hover {
+    background-color: #3643f4;
+    color: #fff;
+}
+
+.btn-delete {
+    padding: 0.5rem;
+    text-decoration: none;
+    color: #ccc;
+    transition: all 0.1s ease-in-out;
+}
+
+.btn-delete:hover {
+    background-color: #f43636;
+    color: #fff;
+}
+
+#modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #00000080;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: auto;
+}
+
+#card {
+    width: 30rem;
+    position: relative;
+    background-color: #202024;
+}
+
+#card h2 {
+    margin: 0;
+}
+
+#window-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem;
+}
+
+#close-btn {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+    transition: all 0.1s ease-in-out;
+}
+
+#close-btn:hover {
+    background-color: #ff0000;
+    border-radius: 0.2rem;
+}
+
+#card hr {
+    width: 90%;
+    margin: 0 auto;
+}
+
+#card p {
+    padding: 1.5rem;
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 3rem;
+}
+
+#btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem;
+}
+
+#btns a {
+    text-decoration: none;
+    padding: 0.5rem;
+    width: 7rem;
+    text-align: center;
+    background-color: #202024;
+    font-size: 1.5rem;
+}
+
+#btn-not {
+    color: #fff;
+    border: solid 1px #fff;
+    margin-right: 1rem;
+    transition: all 0.1s ease-in-out;
+}
+
+#btn-not:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+#btn-yes {
+    color: #ff0000;
+    border: solid 1px #ff0000;
+    margin-right: 1rem;
+    transition: all 0.1s ease-in-out;
+}
+
+#btn-yes:hover {
+    background-color: #ff0000;
+    color: #fff;
 }
