--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Task List</title>
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+        />
     </head>
     <body>
         <header>
             <% if (task == null) {%>
-
+            <h1>TASK LIST</h1>
             <form action="/create" method="post">
                 <input
                     type="text"
@@ -17,11 +21,11 @@
                     id="task"
                     placeholder="Inserir nova tarefa"
                 />
-                <button id="addButton" type="submit">Adicionar</button>
+                <button id="add-button" type="submit">Adicionar</button>
             </form>
 
             <%} else { %>
-
+            <h1>UPDATE TASK</h1>
             <form action="/update/<%= task._id %>" method="post">
                 <input
                     type="text"
@@ -29,34 +33,55 @@
                     id="task"
                     value="<%= task.task %>"
                 />
-                <button id="addButton" type="submit">Atualizar</button>
+                <button id="update-button" type="submit">Atualizar</button>
             </form>
 
             <% } %>
         </header>
-        <section>
+        <section id="task-list">
             <ul>
                 <% taskList.forEach((loop_task) => {%>
                 <li>
-                    <%= loop_task.task %> | <%=
-                    loop_task.date.toLocaleDateString("pt-BR") %>
+                    <div>
+                        <a href="/"> <%= loop_task.task %> </a>
+                        <span>
+                            Adicionada em: <%=
+                            loop_task.date.toLocaleDateString("pt-BR")%>
+                        </span>
+                    </div>
+                    <div>
+                        <a
+                            class="btn-update"
+                            href="/getById/<%= loop_task._id %>/update"
+                            ><i class="bi bi-pencil-square"></i
+                        ></a>
+                        <a
+                            class="btn-delete"
+                            href="/getById/<%= loop_task._id %>/delete"
+                            ><i class="bi bi-trash"></i
+                        ></a>
+                    </div>
                 </li>
-                <a href="/getById/<%= loop_task._id %>/update">Editar</a>
-                <a href="/getById/<%= loop_task._id %>/delete">Apagar</a>
                 <% }) %>
             </ul>
         </section>
 
         <% if(taskDelete != null) {%>
 
-        <section id="modal">
+        <section id="modal"> 
             <div id="card">
-                <a href="/">x</a>
-                <h2>Confirmação</h2>
+                <div id="window-head">
+                    <h2>Confirmação</h2>
+                    <a id="close-btn" href="/"
+                        ><i class="bi bi-x"></i></i
+                    ></a>
+                </div>
                 <hr />
-                <p>Deseja apagar a tarefa "<%= taskDelete.task %>"?</p>
-                <a href="/">Não</a>
-                <a href="/delete/<%= taskDelete.task %>">Sim</a>
+                <p>Deseja realmente apagar a tarefa "<%= taskDelete.task %>"?</p>
+                <div id ="btns">
+                    <a id="btn-not" href="/">Não</a>
+                    <a id="btn-yes" href="/delete/<%= taskDelete.task %>">Sim</a>
+                </div>
             </div>
         </section>
 
