--- a/public/style.css
+++ b/public/style.css
@@ -122,7 +122,7 @@ ul li:hover {
 }
 
 .btn-delete:hover {
-    background-color: #f43636;
+    background-color: #ff0000;
     color: #fff;
 }
 
@@ -219,4 +219,33 @@ ul li:hover {
 #btn-yes:hover {
     background-color: #ff0000;
     color: #fff;
+}
+
+.message {
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 600;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.message-danger {
+    background-color: #cc5757;
+}
+
+.message-sucess {
+    background-color: #7ed67e;
+}
+
+#close-message {
+    font-size: 2rem;
+    cursor: pointer;
+    transition: 0.1s;
+    padding-left: 2rem;
 }
