--- a/public/style.css
+++ b/public/style.css
@@ -77,7 +77,7 @@ ul li {
 ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 1.3rem;
+    padding-left: 2rem;
 }
 
 ul li span {
@@ -248,4 +248,34 @@ ul li:hover {
     cursor: pointer;
     transition: 0.1s;
     padding-left: 2rem;
+}
+
+ul li.check-true {
+    background-color: #4f4e4e;
+    color: #fff;
+    text-decoration: line-through;
+}
+
+/* o before cria um "pseudo elemento" a partir da tag a */
+a.check-true::before {
+    content: "";
+    position: absolute;
+    border: #fff solid;
+    top: 17px;
+    left: 16px;
+    height: 15px;
+    width: 7px;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    /* tudo isso é pra moldar o :checkmark: */
+}
+
+a.check-false::before {
+    content: "";
+    position: absolute;
+    border: #fff solid 2px;
+    top: 18px;
+    left: 16px;
+    height: 16px;
+    width: 16px;
 }
