--- a/public/style.css
+++ b/public/style.css
@@ -58,6 +58,11 @@ button:hover {
     margin: 0.5rem;
 }
 
+#task-list h3 {
+    text-align: center;
+    padding: 2rem;
+}
+
 ul {
     list-style: none;
 }
